fix: nowrap interesses

--- a/checkpoints/CP-02-Frontend-I/02/css/style.css
+++ b/checkpoints/CP-02-Frontend-I/02/css/style.css
@@ -9,6 +9,7 @@ body {
   background-image: url(./../img/sao-paulo-brazil-night.jpg);
   background-size: cover;
   background-attachment: fixed;
+  min-width: 380px;
 }
 
 header {
@@ -104,6 +105,10 @@ form {
 
 .box-dtnasc-inp {
   max-width: 129px;
+}
+
+.opcoes-chk {
+  white-space: nowrap;
 }
 
 /* ### FOOTER ### */
